Closed Bug 399731 Opened 17 years ago Closed 17 years ago

Tab bar background draws incorrectly under UI scaling

Categories

(Camino Graveyard :: Tabbed Browsing, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.10)

Attachments

(1 file)

Attached patch fixSplinter Review
Split out from Ben Willmore's patch in bug 356119; the thin band at the bottom of the tab bar currently draws in completely the wrong place under UI scaling.
Attachment #284797 - Flags: superreview?(mikepinkerton)
Comment on attachment 284797 [details] [diff] [review]
fix

sr=pink
Attachment #284797 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: fixed1.8.1.10
Resolution: --- → FIXED
Target Milestone: Camino2.0 → Camino1.6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: