Camino only - Bug 399731 - Fix tab background drawing under UI scaling. Patch by Ben Willmore <bdeb@willmore.eu>. r=smorgan sr=pink